unpackaged/objects/Contact_Request__c.object
<CustomObject>
  <description>Used by US Restorative to transmit  quality complaints directly to the quality department for Trackwise processing</description>
  <fields>
    <fullName>Account_Address__c</fullName>
    <formula>Account__r.ShippingStreet   &amp; " | "&amp;  Account__r.ShippingCity   &amp; " | "&amp;  Account__r.ShippingState    &amp; " | "&amp;  Account__r.ShippingPostalCode  &amp; " | "&amp; Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Requests</relationshipLabel>
    <relationshipName>Contact_Requests</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Contact.Distributor__c</field>
        <operation>equals</operation>
        <valueField>$Source.Account__c</valueField>
      </filterItems>
      <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Requests</relationshipLabel>
    <relationshipName>Contact_Requests</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Created</fullName>
          <default>true</default>
          <label>Created</label>
        </value>
        <value>
          <fullName>Submitted</fullName>
        </value>
        <value>
          <fullName>Completed</fullName>
        </value>
        <value>
          <fullName>Rejected</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Contact Request</label>
  <listViews>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <listViews>
    <fullName>NA_Caulk_Quality_Contact_Request</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>NA: Caulk Quality</label>
    <language>en_US</language>
    <sharedTo>
      <allInternalUsers></allInternalUsers>
    </sharedTo>
  </listViews>
  <nameField>
    <displayFormat>CR-{000000}</displayFormat>
    <label>Contact Request Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Contact Requests</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>